<resources>

    <string name="app_name">SC2 Bulid Order App</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">SC2 BOA</string>
    <string name="ZergBuildsString">Zerg Builds</string>
    <string name="ProtossBuildsString">Protoss Builds</string>
    <string name="AddBuildString">Add Build Order</string>
    <string name="TimingTableString">Timings Table</string>
    <string name="TerranBuildsString">Terran Builds</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_select_build_order">Select Build Order</string>
    <string name="title_activity_add_build_order">Add Build Order</string>
    <string name="title_activity_debug">Debug</string>
    <string name="BuildOrderString">Build Order</string>
    <string name="RaceString">Race</string>
    <string name="BuildOrderNameString">Name</string>
    <string name="AddBuildOrderButtonString">Add</string>

    <string-array name="races_array">
        <item>Terran</item>
        <item>Protoss</item>
        <item>Zerg</item>
    </string-array>
    
    <string name="HowMuchWouldYouLikeToDonateString">How Much Would You Like To Donate</string>
    <string-array name="donation_ammounts_array">
        <item>$3.99</item>
        <item>$7.99</item>
        <item>$14.99</item>
        
    </string-array>

    <string name="AllBuildsString">All Builds</string>
    <string name="debugDBString">Debug DB</string>
    <string name="AddDefaultDataString">Add Default Data</string>
    <string name="title_activity_display_build_order">Display Build Order</string>
    <string name="AddInitialDataString">Add Initial Data</string>
    <string name="DeleteDBString">Delete DB</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="DonateString">Donate</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="LoadDataFromWebString">Load Data From Web</string>
    <string name="DatabaseInformationString">Database Information</string>
    <string name="ToolsString">Tools</string>
    <string name="SearchByNameString">Search By Name</string>
    <string name="EditString">Edit</string>
    <string name="title_activity_edit_build_order">EditBuildOrderActivity</string>
    <string name="FinishedString">Finished</string>
    <string name="title_activity_display_database_information">DisplayDatabaseInformationActivity</string>
    <string name="RatingString">rating</string>
    <string name="title_activity_donation">DonationActivity</string>
    <string name="uploadtoGAEString">Upload All Builds To GAE</string>
    <string name="downloadallbuildsfromGAE">Download All Builds from GAE</string>
    <string name="LoginString">Log In</string>

</resources>