<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ZergBuildsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listZergBuilds"
        android:text="@string/ZergBuildsString" />

    <Button
        android:id="@+id/TerranBuildsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listTerranBuilds"        
        android:text="@string/TerranBuildsString" />

    <Button
        android:id="@+id/ProtossBuildsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listProtossBuilds"
        android:text="@string/ProtossBuildsString" />

    <Button
        android:id="@+id/AllBuildsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listAllBuilds"
        android:text="@string/AllBuildsString" />

    <Button
        android:id="@+id/AddBuildButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addBuild"
        android:text="@string/AddBuildString" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/button_send" />
    </LinearLayout>

    

</LinearLayout>