<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/BuildOrderNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.91"
                android:text="@string/BuildOrderNameString"
                tools:context=".DebugActivity" />

            <EditText
                android:id="@+id/BuildOrderNameTextField"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/RaceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RaceString"
                tools:context=".DebugActivity" />

            <Spinner
                android:id="@+id/racespinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/races_array" />

        </LinearLayout>

        <EditText
            android:id="@+id/BuildOrderInstructionsTextArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/AddBuildOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addBuildOrder"
            android:text="@string/AddBuildOrderButtonString" />

    </LinearLayout>

</RelativeLayout>